test_regress/t/t_covergroup_trans_single_bad.out
%Error: t/t_covergroup_trans_single_bad.v:15:18: Transition requires at least two values
                                               : ... note: In instance 't'
   15 |             bins t1 = (1);
      |                  ^~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
